--- a/tic-tac-toe/ttt_styles.css
+++ b/tic-tac-toe/ttt_styles.css
@@ -24,6 +24,9 @@ button {
   background-color: aliceblue;
   padding: 0;
   border: 0;
+  font-size: 50px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 button:hover {
   background-color: rgb(215, 255, 255);
