--- a/tic-tac-toe/ttt_styles.css
+++ b/tic-tac-toe/ttt_styles.css
@@ -1,9 +1,3 @@
-.board-container {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-}
-
 table {
   align-self: center;
   border: 2px solid;
@@ -17,17 +11,41 @@ td {
   width: 100px;
   border: 2px solid;
 }
-
 button {
-  height: 100%;
-  width: 100%;
-  background-color: aliceblue;
-  padding: 0;
-  border: 0;
-  font-size: 50px;
+  font-size: 30px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-button:hover {
-  background-color: rgb(215, 255, 255);
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.activePlayer-container {
+  display: flex;
+  justify-content: center;
+}
+.board-container {
+  display: flex;
+  justify-content: center;
+  height: 70%;
+  margin-bottom: 35px;
+}
+.table-button {
+  height: 100%;
+  width: 100%;
+  background-color: #ceeaf7;
+  padding: 0;
+  border: 0;
+}
+.table-button:hover {
+  background-color: #828a95;
+}
+.restart-container {
+  display: flex;
+  justify-content: center;
+}
+.restart-button {
+  height: 100%;
+  background-color: #ccd7e4;
 }
